Pages-content, plus-cookies (#7)
* Create pet_nem.jpg

* add and edit types

* spacing

* update routes

* new link

* edit prop name

* base structure of page

* prop edit

* Routes tsx add

* Update vite.config.ts

server host, just for watchin it on another computer

* data and constants added

* types edit

* styles edit props

* Routes edit

* Create AboutPage.tsx

* using Routes to links

* Create IContactProps.tsx

* updating page with cards

* edit styles

* delete TODO

* Update TImageLinkTypes.tsx

* Created cards

* contacts structure list

* address and contact page content

* edit props card titles size

* new assets added

* section styles edit

* contact cards style edit

* contacts page content and styles

* components style edit

* routes created and interface edit

* About page created

content added

* styles edit

* Update Partners.tsx

* styles edit

* assets edit

* react icons added

* using icons, style changes

* Update Rules.tsx

* cookies added and styles changed

* Update AboutPage.tsx

font size

* images moved from public

* created data subfolders for rules and paragraphs

* using img as compo and data routes

* styles edits

* routes to czech and route.route edit

* Cookies edit

* layout folder edit

* layout folder names fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,13 @@
 :root {
   font-family: "Source Sans Pro", sans-serif;
+  --clr-primary:rgb(238, 119, 17);
 }
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
 body {
-
   min-width: 320px;
   max-width: 100vw;
   min-height: 100vh;
