--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ const metaTags = {
 ---
 
 <Layout {...metaTags}>
-  <section class="pt-44 min-h-screen bg-gradient-to-b from-white via-white to-stone-100">
+  <section class="py-32 min-h-screen bg-gradient-to-b from-white via-white to-stone-100">
     <div class="container mx-auto px-4">
       <h1 class="text-center text-7xl font-extrabold tracking-wide">Studentská Unie UTB</h1>
       <p class="text-xl pt-6 text-gray-700 tracking-wide leading-relaxed max-w-4xl mx-auto text-center">
@@ -17,9 +17,7 @@ const metaTags = {
         něco příjemnější - pro studenty, zaměstnance UTB i pro veřejnost.
       </p>
       <div class="flex justify-center items-center pt-8 gap-4">
-        <a href="" class="px-9 py-4 bg-slate-200 text-slate-800 rounded-lg tracking-wide font-bold text-xl">
-          Projekty</a
-        >
+        <a href="" class="px-9 py-4 bg-slate-200 text-slate-800 rounded-lg tracking-wide font-bold text-xl"> O nás</a>
         <a
           href=""
           class="px-9 py-4 bg-primary-600 text-primary-50 rounded-lg tracking-wide font-bold text-xl shadow-lg shadow-primary-600/30"
