--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
 import Layout from '../components/Layout.astro';
+import KolejeAMenzaImage from '../images/home/koleje-a-menza.png';
+import UniverzitaTomaseBatiImage from '../images/home/univerzita-tomase-bati.png';
 
 const metaTags = {
   title: 'Studentská unie UTB',
@@ -8,7 +10,7 @@ const metaTags = {
 ---
 
 <Layout {...metaTags}>
-  <section class="py-32 min-h-screen bg-gradient-to-b from-white via-white to-stone-100">
+  <section class="py-32 min-h-screen bg-gradient-to-b from-white via-stone-100 to-stone-100">
     <div class="container mx-auto px-4">
       <h1 class="text-center text-7xl font-extrabold tracking-wide">Studentská Unie UTB</h1>
       <p class="text-xl pt-6 text-gray-700 tracking-wide leading-relaxed max-w-4xl mx-auto text-center">
@@ -33,6 +35,16 @@ const metaTags = {
           src="https://sutb.cz/assets/unie-img.cdd04709.jpg"
           alt=""
         />
+      </div>
+    </div>
+    <div class="max-w-7xl mx-auto pt-16 px-4 sm:px-6 lg:px-8">
+      <div class="flex flex-col sm:flex-row justify-center items-center gap-x-12 gap-y-6">
+        <a href="https://www.utb.cz/" target="_blank" rel="noopener noreferrer external" class="block">
+          <img class="h-16" src={UniverzitaTomaseBatiImage.src} alt="Univerzita Tomáše Bati" />
+        </a>
+        <a href="https://kmz.utb.cz/" target="_blank" rel="noopener noreferrer external" class="block">
+          <img class="h-16" src={KolejeAMenzaImage.src} alt="Koleje a menza" />
+        </a>
       </div>
     </div>
   </section>
