--- a/src/components/organisms/Head.astro
+++ b/src/components/organisms/Head.astro
@@ -1,6 +1,12 @@
 ---
+interface Props {
+  title: string;
+  description: string;
+  image?: string;
+}
+
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-const socialImageURL = new URL(Astro.props.imageUrl ?? '/meta_image.png', Astro.url);
+const socialImageURL = new URL(Astro.props.image ?? '/meta-image.jpg', Astro.url);
 ---
 
 <head>
@@ -23,7 +29,7 @@ const socialImageURL = new URL(Astro.props.imageUrl ?? '/meta_image.png', Astro.
   <link rel="manifest" href="/site.webmanifest" />
   <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#ee7711" />
   <meta name="msapplication-TileColor" content="#da532c" />
-  <meta name="theme-color" content="#ee7711" />
+  <meta name="theme-color" content="#fff" />
 
   <link rel="canonical" href={canonicalURL} data-baseprotocol="https:" />
   <link rel="sitemap" href="/sitemap-index.xml" />
