--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,51 +1,52 @@
 ---
+import { Image } from 'astro:assets';
 import Layout from '../components/Layout.astro';
+import { Button } from '../components/atoms/Button';
+import Container from '../components/atoms/Container.astro';
+import H1 from '../components/atoms/H1.astro';
+import HeroImage from '../images/home/hero.jpg';
 import KolejeAMenzaImage from '../images/home/koleje-a-menza.png';
 import UniverzitaTomaseBatiImage from '../images/home/univerzita-tomase-bati.png';
 
 const metaTags = {
   title: 'Studentská unie UTB',
-  description: '',
+  description:
+    'Studentská unie UTB je nestátní nezisková organizace. Fungujeme od roku 2005, jsme zcela nezávislí na univerzitě a všichni jsme dobrovolníci. Jak se můžete dočíst v našich stanovách, našim posláním je dělat život ve Zlíně o něco příjemnější - pro studenty, zaměstnance UTB i pro veřejnost.',
 };
 ---
 
 <Layout {...metaTags}>
-  <section class="py-32 min-h-screen bg-gradient-to-b from-white via-stone-100 to-stone-100">
-    <div class="container mx-auto px-4">
-      <h1 class="text-center text-7xl font-extrabold tracking-wide">Studentská Unie UTB</h1>
-      <p class="text-xl pt-6 text-gray-700 tracking-wide leading-relaxed max-w-4xl mx-auto text-center">
+  <section
+    class="md:pt-16 pb-16 lg:pb-32 min-h-screen bg-gradient-to-b from-white via-stone-100 to-stone-100 md:text-center"
+  >
+    <Container>
+      <H1>Studentská Unie UTB</H1>
+      <p
+        class="sm:text-lg md:text-xl pt-4 md:pt-6 text-stone-700 tracking-wide leading-relaxed max-w-4xl mx-auto text-left md:text-center md:leading-relaxed"
+      >
         Studentská unie UTB je nestátní nezisková organizace. Fungujeme od roku 2005, jsme zcela nezávislí na univerzitě
         a všichni jsme dobrovolníci. Jak se můžete dočíst v našich stanovách, našim posláním je dělat život ve Zlíně o
         něco příjemnější - pro studenty, zaměstnance UTB i pro veřejnost.
       </p>
-      <div class="flex justify-center items-center pt-8 gap-4">
-        <a href="" class="px-9 py-4 bg-slate-200 text-slate-800 rounded-lg tracking-wide font-bold text-xl"> O nás</a>
-        <a
-          href=""
-          class="px-9 py-4 bg-primary-600 text-primary-50 rounded-lg tracking-wide font-bold text-xl shadow-lg shadow-primary-600/30"
-        >
-          Kontakt</a
-        >
+      <div class="flex justify-start md:justify-center items-center pt-8 gap-4">
+        <Button type="link" href="/o-nas" variant="gray" size="lg" text="O nás" />
+        <Button type="link" href="/kontakt" variant="primary" size="lg" text="Kontakt" />
+      </div>
+    </Container>
+    <div class="relative pt-16 sm:pt-20 md:pt-24 pb-8 sm:pb-12 md:pb-16">
+      <div class="max-w-6xl mx-auto px-2 sm:px-4 md:px-6 lg:px-8 aspect-[2/1]">
+        <Image class="relative rounded-lg shadow-xl h-full w-full object-cover object-center" src={HeroImage} alt="" />
       </div>
     </div>
-    <div class="relative pt-24">
-      <div class="max-w-6xl mx-auto px-4 sm:px-6 aspect-[2/1]">
-        <img
-          class="relative rounded-lg shadow-xl h-full w-full object-cover object-center"
-          src="https://sutb.cz/assets/unie-img.cdd04709.jpg"
-          alt=""
-        />
-      </div>
-    </div>
-    <div class="max-w-7xl mx-auto pt-16 px-4 sm:px-6 lg:px-8">
-      <div class="flex flex-col sm:flex-row justify-center items-center gap-x-12 gap-y-6">
+    <Container>
+      <div class="flex flex-wrap justify-center items-center gap-x-12 gap-y-6">
         <a href="https://www.utb.cz/" target="_blank" rel="noopener noreferrer external" class="block">
-          <img class="h-16" src={UniverzitaTomaseBatiImage.src} alt="Univerzita Tomáše Bati" />
+          <img class="h-14 md:h-16" src={UniverzitaTomaseBatiImage.src} alt="Univerzita Tomáše Bati" />
         </a>
         <a href="https://kmz.utb.cz/" target="_blank" rel="noopener noreferrer external" class="block">
-          <img class="h-16" src={KolejeAMenzaImage.src} alt="Koleje a menza" />
+          <img class="h-14 md:h-16" src={KolejeAMenzaImage.src} alt="Koleje a menza" />
         </a>
       </div>
-    </div>
+    </Container>
   </section>
 </Layout>
