--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -1,10 +1,22 @@
 ---
+import { Image } from 'astro:assets';
 import Layout from '../components/Layout.astro';
+import Container from '../components/atoms/Container.astro';
+import H1 from '../components/atoms/H1.astro';
+import { Icon } from '../components/atoms/Icon.tsx';
 import Breadcrumbs from '../components/organisms/Breadcrumbs.astro';
+import BuresImage from '../images/kontakt/bures.jpg';
+import GerzaImage from '../images/kontakt/gerza.jpg';
+import HazuchovaImage from '../images/kontakt/hazuchova.jpg';
+import HozzovaImage from '../images/kontakt/hozzova.jpg';
+import PavelkovaImage from '../images/kontakt/pavelkova.jpg';
+import SedlacikovaImage from '../images/kontakt/sedlacikova.jpg';
 
 const metaTags = {
   title: 'Studentská unie UTB',
-  description: '',
+  description:
+    'Rádi byste navázali spolupráci? Něco byste změnili? Máte dotaz? Naši hvězdní manažeři jsou vám k dispozici, neváhejte se nám ozvat!',
+  image: '/meta-image-kontakt.jpg',
 };
 
 const people = [
@@ -13,35 +25,45 @@ const people = [
     role: 'Prezident',
     email: 'gerza@sutb.cz',
     tel: '+420 605 803 354',
-    image: 'https://sutb.cz/assets/veronika_pavelkova.e3698590.jpg',
+    image: GerzaImage,
   },
   {
-    name: 'Dominik Gerža',
-    role: 'Prezident',
-    email: 'gerza@sutb.cz',
-    tel: '+420 605 803 354',
-    image: 'https://sutb.cz/assets/veronika_pavelkova.e3698590.jpg',
+    name: 'Simona Hazuchová',
+    role: 'Viceprezidentka',
+    email: 'hazuchova@sutb.cz',
+    image: HazuchovaImage,
   },
   {
-    name: 'Dominik Gerža',
-    role: 'Prezident',
-    email: 'gerza@sutb.cz',
-    tel: '+420 605 803 354',
-    image: 'https://sutb.cz/assets/veronika_pavelkova.e3698590.jpg',
+    name: 'Veronika Pavelková',
+    role: 'Viceprezidentka',
+    email: 'pavelkova@sutb.cz',
+    image: PavelkovaImage,
   },
   {
-    name: 'Dominik Gerža',
-    role: 'Prezident',
-    email: 'gerza@sutb.cz',
-    tel: '+420 605 803 354',
-    image: 'https://sutb.cz/assets/veronika_pavelkova.e3698590.jpg',
+    name: 'Kateřina Sedlačiková',
+    role: 'Tajemnice',
+    email: 'sedlacikova@sutb.cz',
+    image: SedlacikovaImage,
+  },
+  {
+    name: 'Michelle Hozová',
+    role: 'HR',
+    email: 'hozzova@sutb.cz',
+
+    image: HozzovaImage,
+  },
+  {
+    name: 'Jan Bureš',
+    role: 'HR',
+    email: 'bures@sutb.cz',
+    image: BuresImage,
   },
 ];
 ---
 
 <Layout {...metaTags}>
-  <section class="pt-12 pb-16 bg-gradient-to-b from-white via-stone-100 to-stone-100">
-    <div class="max-w-7xl mx-auto px-4 md:px-6 xl:px-8">
+  <section class="pt-12 pb-16 bg-gradient-to-b from-white via-stone-100 to-stone-100 px-4 sm:px-8 md:px-8 lg:px-10">
+    <Container>
       <Breadcrumbs
         items={[
           {
@@ -50,61 +72,33 @@ const people = [
           },
         ]}
       />
-      <h1 class="text-7xl pt-12 font-extrabold tracking-wide">Kontakt</h1>
-      <p class="text-xl pt-6 text-gray-700 tracking-wide leading-relaxed max-w-3xl">
+      <H1>Kontakt</H1>
+      <p
+        class="sm:text-lg lg:text-xl pt-6 text-stone-700 tracking-wide leading-relaxed sm:leading-relaxed lg:leading-relaxed"
+      >
         Rádi byste navázali spolupráci? Něco byste změnili? Máte dotaz? <br />
         <strong class="font-medium">Naši hvězdní manažeři jsou vám k dispozici, neváhejte se nám ozvat!</strong>
       </p>
-      <ul class="pt-28 grid grid-cols-3 gap-x-12 gap-y-24">
+      <ul class="pt-16 md:pt-24 grid sm:grid-cols-2 lg:grid-cols-3 gap-x-12 gap-y-16 max-w-sm sm:max-w-none mx-auto">
         {
           people.map((person) => (
-            <li class="bg-white px-6 pb-6 pt-12 rounded-md border border-stone-200 shadow-sm relative text-center">
-              <div class="absolute left-1/2 tranform -translate-x-1/2 w-24 top-0 -translate-y-1/2 rounded-full border shadow-sm overflow-hidden ">
-                <img src={person.image} alt="" />
-              </div>
-              <h2 class="text-2xl font-bold tracking-wide text-stone-800 pt-5">{person.name}</h2>
-              <p class="text-primary-600 font-medium uppercase tracking-wider pt-1">{person.role}</p>
+            <li class="px-2 relative  group flex flex-col items-center sm:items-start">
+              {person.image && <Image src={person.image} class="h-32 w-32 rounded-full shadow-lg" alt="" />}
+              <h2 class="text-xl md:text-2xl font-bold tracking-wide text-stone-800 pt-4 md:pt-5">{person.name}</h2>
+              <p class="text-primary-600 font-medium uppercase tracking-wider">{person.role}</p>
               <a
-                class="mt-4 text-lg  font-medium py-1 text-stone-600 flex justify-center items-center hover:text-primary-600 transition duration-300"
+                class="mt-2 md:text-lg  font-medium py-1 text-stone-600 flex justify-start items-center hover:text-primary-600 transition duration-300"
                 href={`mailto:${person.email}`}
               >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="2"
-                  stroke="currentColor"
-                  class="w-5 h-5 mr-2.5"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25h-15a2.25 2.25 0 01-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25m19.5 0v.243a2.25 2.25 0 01-1.07 1.916l-7.5 4.615a2.25 2.25 0 01-2.36 0L3.32 8.91a2.25 2.25 0 01-1.07-1.916V6.75"
-                  />
-                </svg>
-
+                <Icon name="mail" className="w-5 h-5 mr-2.5" />
                 <span>{person.email}</span>
               </a>
               {person.tel && (
                 <a
-                  class="mt-1 text-lg font-medium py-1 text-stone-600 flex justify-center items-center hover:text-primary-600 transition duration-300"
+                  class="md:text-lg font-medium py-1 text-stone-600 flex justify-start items-center hover:text-primary-600 transition duration-300"
                   href={`tel:${person.tel}`}
                 >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke-width="2"
-                    stroke="currentColor"
-                    class="w-5 h-5 mr-2.5"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 002.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 01-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 00-1.091-.852H4.5A2.25 2.25 0 002.25 4.5v2.25z"
-                    />
-                  </svg>
-
+                  <Icon name="tel" className="w-5 h-5 mr-2.5" />
                   <span>{person.tel}</span>
                 </a>
               )}
@@ -112,17 +106,17 @@ const people = [
           ))
         }
       </ul>
-    </div>
+    </Container>
   </section>
   <section class="py-16 bg-stone-100">
-    <div class="max-w-7xl mx-auto px-4 md:px-6 xl:px-8 text-center">
-      <h1 class="text-4xl font-extrabold tracking-wide">Adresa</h1>
-      <p class="text-center text-lg text-stone-700 leading-relaxed tracking-wide pt-4">
+    <Container>
+      <h2 class="text-2xl sm:text-3xl md:text-4xl pt-12 font-bold tracking-wide text-center">Adresa</h2>
+      <p class="text-center text-sm sm:text-base md:text-lg text-stone-700 leading-relaxed tracking-wider pt-4">
         Studentská unie UTB, z.s. <br />
          Růmy 4046, budova U3 UTB <br />
          760 01 Zlín <br />
          IČO: 26996286
       </p>
-    </div>
+    </Container>
   </section>
 </Layout>
