--- a/src/components/organisms/Footer.astro
+++ b/src/components/organisms/Footer.astro
@@ -113,7 +113,9 @@ import { SuLogo } from '../atoms/SuLogo';
       </div>
     </div>
     <div class="mt-12 border-t border-stone-200 pt-8">
-      <p class="text-base text-stone-400 xl:text-center">&copy; 2023 Studentská unie UTB, všechna práva vyhrazena.</p>
+      <p class="text-base text-black/40 tracking-wide xl:text-center">
+        &copy; 2023 Studentská unie UTB, všechna práva vyhrazena.
+      </p>
     </div>
   </div>
 </footer>
