--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -46,7 +46,7 @@ const people = [
     image: SedlacikovaImage,
   },
   {
-    name: 'Michelle Hozová',
+    name: 'Michelle Hozzová',
     role: 'HR',
     email: 'hozzova@sutb.cz',
 
