--- a/src/pages/pridej-se-k-nam.astro
+++ b/src/pages/pridej-se-k-nam.astro
@@ -167,8 +167,11 @@ const metaTags = {
         Stačí prostě jenom napsat na su@sutb.cz nebo na Facebook, tak jednoduché to je. <br />
          V SU se nic nepodepisuje, ani se neplatí žádný členský příspěvek.
       </p>
-      <Button type="link" href="kontakt" variant="white" size="lg" text="Kontaktuj nás" />
-      <svg class="h-64 w-64 sm:h-96 sm:w-96 absolute -left-4 -bottom-8 opacity-[0.075]" viewBox="0 0 33 30">
+      <Button type="link" href="/kontakt" variant="white" size="lg" text="Kontaktuj nás" />
+      <svg
+        class="h-64 w-64 sm:h-96 sm:w-96 absolute -left-4 -bottom-8 opacity-[0.075] pointer-events-none"
+        viewBox="0 0 33 30"
+      >
         <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
           <g transform="translate(-32.000000, -26.000000)" fill="#fff" fill-rule="nonzero">
             <g id="logo_su" transform="translate(32.000000, 26.000000)">
