--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -14,7 +14,7 @@ const metaTags = {
 <Layout {...metaTags}>
   <section class="md:pt-16 pb-16 lg:pb-32 bg-gradient-to-b from-white via-white to-stone-100 md:text-center">
     <Container>
-      <div class="py-16">
+      <div class="py-16 min-h-[50vh] flex justify-center items-center">
         <div class="text-center">
           <div class="flex-shrink-0 flex justify-center"></div>
           <H1>Stránka nenalezena</H1>
