--- a/src/components/organisms/Footer.astro
+++ b/src/components/organisms/Footer.astro
@@ -22,8 +22,8 @@ import { SuLogo } from '../atoms/SuLogo';
             target="_blank"
             rel="noopener noreferrer external"
             class="hover:text-primary-600 transition duration-300"
+            title="Facebook"
           >
-            <span class="text-stone-700 sr-only">Facebook</span>
             <Icon name="facebook" className="h-6 w-6" />
           </a>
 
@@ -32,8 +32,8 @@ import { SuLogo } from '../atoms/SuLogo';
             target="_blank"
             rel="noopener noreferrer external"
             class="hover:text-primary-600 transition duration-300"
+            title="Instagram"
           >
-            <span class="text-stone-700 sr-only">Instagram</span>
             <Icon name="instagram" className="h-6 w-6" />
           </a>
           <a
@@ -41,8 +41,8 @@ import { SuLogo } from '../atoms/SuLogo';
             target="_blank"
             rel="noopener noreferrer external"
             class="hover:text-primary-600 transition duration-300"
+            title="Youtube"
           >
-            <span class="text-stone-700 sr-only">Youtube</span>
             <Icon name="youtube" className="h-6 w-6" />
           </a>
         </nav>
@@ -113,8 +113,8 @@ import { SuLogo } from '../atoms/SuLogo';
       </div>
     </div>
     <div class="mt-12 border-t border-stone-200 pt-8">
-      <p class="text-base text-black/40 tracking-wide xl:text-center">
-        &copy; 2023 Studentská unie UTB, všechna práva vyhrazena.
+      <p class="text-base text-black/50 tracking-wide xl:text-center">
+        &copy; 2022 - {new Date().getFullYear()} Studentská unie UTB, všechna práva vyhrazena.
       </p>
     </div>
   </div>
