president update - without photo

--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -21,10 +21,10 @@ const metaTags = {
 
 const people = [
   {
-    name: 'Dominik Gerža',
+    name: 'Karel Kratochvil',
     role: 'Prezident',
-    email: 'gerza@sutb.cz',
-    tel: '+420 605 803 354',
+    email: 'kratochvil@sutb.cz',
+    tel: '+420 725 979 411',
     image: GerzaImage,
   },
   {
@@ -130,9 +130,9 @@ const people = [
       <h2 class="text-2xl sm:text-3xl md:text-4xl pt-12 font-bold tracking-wide text-center">Adresa</h2>
       <p class="text-center text-sm sm:text-base md:text-lg text-stone-700 leading-relaxed tracking-wider pt-4">
         Studentská unie UTB, z.s. <br />
-         Růmy 4046, budova U3 UTB <br />
-         760 01 Zlín <br />
-         IČO: 26996286
+        Růmy 4046, budova U3 UTB <br />
+        760 01 Zlín <br />
+        IČO: 26996286
       </p>
     </Container>
   </section>
