--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -6,9 +6,9 @@ import H1 from '../components/atoms/H1.astro';
 import { Icon } from '../components/atoms/Icon.tsx';
 import Breadcrumbs from '../components/organisms/Breadcrumbs.astro';
 import BuresImage from '../images/kontakt/bures.jpg';
-import GerzaImage from '../images/kontakt/gerza.jpg';
 import HazuchovaImage from '../images/kontakt/hazuchova.jpg';
 import HozzovaImage from '../images/kontakt/hozzova.jpg';
+import KratochvilImage from '../images/kontakt/kratochvil.jpg';
 import PavelkovaImage from '../images/kontakt/pavelkova.jpg';
 import SedlacikovaImage from '../images/kontakt/sedlacikova.jpg';
 
@@ -25,7 +25,7 @@ const people = [
     role: 'Prezident',
     email: 'kratochvil@sutb.cz',
     tel: '+420 725 979 411',
-    image: GerzaImage,
+    image: KratochvilImage,
   },
   {
     name: 'Simona Hazuchová',
