--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -6,9 +6,9 @@ import H1 from '../components/atoms/H1.astro';
 import { Icon } from '../components/atoms/Icon.tsx';
 import Breadcrumbs from '../components/organisms/Breadcrumbs.astro';
 import BuresImage from '../images/kontakt/bures.jpg';
-import GerzaImage from '../images/kontakt/gerza.jpg';
 import HazuchovaImage from '../images/kontakt/hazuchova.jpg';
 import HozzovaImage from '../images/kontakt/hozzova.jpg';
+import KratochvilImage from '../images/kontakt/kratochvil.jpg';
 import PavelkovaImage from '../images/kontakt/pavelkova.jpg';
 import SedlacikovaImage from '../images/kontakt/sedlacikova.jpg';
 
@@ -21,11 +21,11 @@ const metaTags = {
 
 const people = [
   {
-    name: 'Dominik Gerža',
+    name: 'Karel Kratochvil',
     role: 'Prezident',
-    email: 'gerza@sutb.cz',
-    tel: '+420 605 803 354',
-    image: GerzaImage,
+    email: 'kratochvil@sutb.cz',
+    tel: '+420 725 979 411',
+    image: KratochvilImage,
   },
   {
     name: 'Simona Hazuchová',
@@ -130,9 +130,9 @@ const people = [
       <h2 class="text-2xl sm:text-3xl md:text-4xl pt-12 font-bold tracking-wide text-center">Adresa</h2>
       <p class="text-center text-sm sm:text-base md:text-lg text-stone-700 leading-relaxed tracking-wider pt-4">
         Studentská unie UTB, z.s. <br />
-         Růmy 4046, budova U3 UTB <br />
-         760 01 Zlín <br />
-         IČO: 26996286
+        Růmy 4046, budova U3 UTB <br />
+        760 01 Zlín <br />
+        IČO: 26996286
       </p>
     </Container>
   </section>
